# POO-project

./: CMakeLists.txt  LICENSE  README.md  instructions.md
.github/workflows/: precheck.yml
build-precheck/: CMakeCache.txt  Makefile  cmake_install.cmake
design/: README.md  header_check.cpp  relatorio_etapa1.md
design/uml/: agenda_classes.puml
include/agenda/: Calendar.hpp  Date.hpp  DateTime.hpp  DomainTypes.hpp  Event.hpp  Exceptions.hpp  ICalendarSerializer.hpp  ILogger.hpp  JsonStorage.hpp  Observer.hpp  Query.hpp  RecurrenceRule.hpp  Repository.hpp  Storage.hpp  Tag.hpp  Time.hpp  UndoRedo.hpp  User.hpp
include/agenda/gui/: IFactory.hpp  IView.hpp
scripts/: cli-demo.sh  precheck.sh
src/: main_cli.cpp
